[package]
name = "comp-math"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "task2"
path = "task2.rs"

[[bin]]
name = "task3"
path = "task3.rs"

[[bin]]
name = "task4"
path = "task4.rs"

[[bin]]
name = "task5"
path = "task5.rs"

[dependencies]
image = "0.25.10"
num = "0.4.3"
plotly = { version = "0.14", features = ["static_export_geckodriver"]}
